--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
@@ -22,15 +21,13 @@
         <input class="form-control" type="text" name="nomeErro" id="nomeErro" />
     </div>
 
-    <div class="form-group labels">
-        <label for="nomeErro">Validado: FIX</label>
-        <input class="radioClass" type="radio" value="sim" name="validado" id="campo-radio1" />
-        <label class="radioClass" for="validado">Sim</label>
-        <input class="radioClass" type="radio" value="nao" name="validado" id="campo-radio2" />
-        <label class="radioClass" for="validado">Não</label>
+    <div class="form-group">
+    	<label for="select">Solução Validada?</label>
+    	<select name="select" class="form-control">
+    		<option value="sim" selected="selected">Sim</option>
+    		<option value="nao">Não</option>
+    	</select>
     </div>
-</br>
-</br>
     <div class="form-group">
     	<label for="ocorrencia">Ocorrências:</label>
     	<textarea class="form-control" name="ocorrencia" rows="5" cols="10"></textarea>
