--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <form id="bugScout" action="#" method="post">
+  <form id="bugScout" action="index.php" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="cod">Codigo Erro:</label>
         <input class="form-control" type="text" name="cod" id="cod" required/>
@@ -44,7 +44,7 @@
     </div>
     <div class="form-group">
     	<label for="justificativa">Resposta:</label>
-    	<textarea class="form-control" name="justificativa" rows="5" cols="10"required></textarea>
+    	<textarea class="form-control" name="justificativa" rows="5" cols="10" required></textarea>
     </div>
     <p>
         <input type="submit" value="Enviar" class="btn btn-primary btn-block" />
