message to select

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </div>
     <div class="form-group">
     	<label for="tipo_resposta">Selecione o tipo de resposta aplicada:</label>
-    	<select name="tipo_resposta" class="form-control">
-    		<option value="none" selected="selected">Selecione</option>
+    	<select name="tipo_resposta" class="form-control" required>
+    		<option value="" selected="selected">Selecione</option>
     		<option value="justificativa">Justificativa</option>
     		<option value="esclarecimento">Esclarecimento</option>
     		<option value="modificado">Modificação</option>
